<resources>
    <string name="app_name">AERO</string>
    <!--text used within app-->
    <string name="help_instructions">Repeat the pattern of the arrows displayed on top of the screen. If you get one wrong, the game will end and display your score.</string>
    <string name="credits">Aero is an app designed and developed by students from the University of North Georgia. Designed and developed in the spring of 2024 as a project for their Mobile Applications class by developers Ivan Turcios, Elizabeth Sexton, Helen Viec, and Conor Smith."</string>

    <!--content descriptions-->
    <string name="cd_aero">aero logo</string>
    <string name="cd_astronaut">astronaut image</string>
    <string name="cd_play">play</string>
    <string name="cd_help">help</string>
    <string name="cd_settings">settings</string>
    <string name="cd_colors">colors</string>
    <string name="cd_credits">credits</string>
    <string name="Replay" />
    <string name="gameOver" />
    <string name="Menu" />
    <string name="Score" />
    <string name="rectangle"/>
    <string name="how_to_play"/>
    <string name="default_color"/>
    <string name="yellow"/>
    <string name="pink"/>
    <string name="green"/>



</resources>