<?xml version="1.0" encoding="utf-8"?>
<!-- CONOR - LAYOUT FOR HELP ACTIVITY -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/space_bg"
    tools:context=".SettingsActivity">


    <ImageView
        android:id="@+id/helpHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/cd_help"
        android:src="@drawable/settings_header_help"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/howToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings_howtoplay"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/helpHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/how_to_play" />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/orange_rectangle"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helpHeader"
        android:contentDescription="@string/rectangle" />

    <TextView
        android:id="@+id/gameInstructions"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/help_instructions"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/howToPlay"

        />

    <ImageView
        android:id="@+id/astronaut"
        android:layout_width="146dp"
        android:layout_height="147dp"
        android:contentDescription="@string/cd_astronaut"
        android:src="@drawable/start_astronaut"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/gameInstructions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>