<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/space_bg"
    tools:context=".AboutActivity"
    >


    <ImageView
        android:id="@+id/creditsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:layout_marginTop="260dp"
        android:contentDescription="@string/cd_credits"
        android:src="@drawable/settings_header_credits"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:src="@drawable/orange_rectangle"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creditsHeader"
        android:contentDescription="@string/rectangle" />

    <TextView
        android:id="@+id/creditsText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/creditsHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>