<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/space_bg"
    tools:context=".ColorActivity">

    <ImageView
        android:id="@+id/colorHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/cd_colors"
        android:src="@drawable/settings_header_colors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/defaultButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/color_button_default"
        style="@style/StartPageButton"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorHeader"
        android:contentDescription="@string/default_color"
        />

    <ImageButton
        android:id="@+id/YellowButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/color_button_yellow"
        style="@style/StartPageButton"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/defaultButton"
        android:contentDescription="@string/yellow"
        android:onClick="onYellowClick"
        />

    <ImageButton
        android:id="@+id/PinkButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/color_button_pink"
        style="@style/StartPageButton"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/YellowButton"
        android:contentDescription="@string/pink"
        />

    <ImageButton
        android:id="@+id/GreenButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/color_button_green"
        style="@style/StartPageButton"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PinkButton"
        android:contentDescription="@string/pink"
        />



</androidx.constraintlayout.widget.ConstraintLayout>